...
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="#B8B8D1">


    <EditText
        android:id="@+id/session_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" >

        <Spinner
            android:id="@+id/current_courses_spinner"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:dropDownWidth="225dp"
            android:spinnerMode="dropdown" />
    </FrameLayout>

    <Button
        android:id="@+id/save_session_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_popup_button"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
